--- a/src/app/popups/form-desenho/form-desenho.component.html
+++ b/src/app/popups/form-desenho/form-desenho.component.html
@@ -39,18 +39,23 @@
 
     <!-- checkbox ou lista de opcoes talvez agrupar com o proximo -->
     <div class="checkbox">
+        
         <div class="status">
             <p>Está em lançamento ou finalizado:</p>
-            <mat-checkbox value="L" [(ngModel)]="Desenho.status" name="statusL">Lançamento</mat-checkbox>
-            <mat-checkbox value="F" [(ngModel)]="Desenho.status" name="statusF">finalizado</mat-checkbox>
+            <mat-radio-group>
+                <mat-radio-button value="L" [(ngModel)]="Desenho.status" name="statusL">Lançamento</mat-radio-button>
+                <mat-radio-button value="F" [(ngModel)]="Desenho.status" name="statusF">Finalizado</mat-radio-button>
+            </mat-radio-group>
         </div>
 
         <!-- checkbox ou lista de opcoes -->
         <div class="visto">
             <p>Já assistiu ou não:</p>
-            <mat-checkbox value="vi" [(ngModel)]="Desenho.statusVisto" name="statusVisto">Já assisti</mat-checkbox>
-            <mat-checkbox value="nvi" [(ngModel)]="Desenho.statusVisto" name="statusVisto">Não assisti</mat-checkbox>
-            <mat-checkbox value="ass" [(ngModel)]="Desenho.statusVisto" name="statusVisto">Ainda assistirei</mat-checkbox>
+            <mat-radio-group>
+                <mat-radio-button value="vi" [(ngModel)]="Desenho.statusVisto" name="statusVisto">Já assisti</mat-radio-button>
+                <mat-radio-button value="nvi" [(ngModel)]="Desenho.statusVisto" name="statusVisto">Não assisti</mat-radio-button>
+                <mat-radio-button value="ass" [(ngModel)]="Desenho.statusVisto" name="statusVisto">Ainda Assistirei</mat-radio-button>
+            </mat-radio-group>
         </div>
     </div>
 
