--- a/src/app/componentes/quadrinhos/quadrinhos.component.html
+++ b/src/app/componentes/quadrinhos/quadrinhos.component.html
@@ -75,40 +75,8 @@
                             <mat-card-header>
                                     <mat-card-title>Lancamento</mat-card-title>
                             </mat-card-header>
-                            <mat-card-content>{{ quadrinho.dtLancamento }}</mat-card-content>
+                            <mat-card-content>{{ quadrinho.dtLancamento | date: 'dd/MM/yyyy' }}</mat-card-content>
                     </mat-card>
             </div>        
     </div>
 </div>
-
-<!-- <form >
-    <div class="form-group">
-        <input type="text" [(ngModel)]="Audio.nome" name="nome">
-        <input type="text" [(ngModel)]="Audio.autor" name="autor" >
-        <input type="text" [(ngModel)]="Audio.descricao" name="descricao">
-        <input type="text" [(ngModel)]="Audio.disponibilidade" name="disponibilidade">
-        <input type="text" [(ngModel)]="Audio.estudio" name="estudio">
-        <input type="text" [(ngModel)]="Audio.duracao" name="nacionalidade">
-        <input type="text" [(ngModel)]="Audio.statusVisto" name="statusVisto">
-        <input type="number" [(ngModel)]="Audio.tipo" name="maxEps">
-        <input type="date" [(ngModel)]="Audio.dtLancamento" name="dtLancamento">
-
-        <input type="submit" value="Enviar" (click)="enviaDados()">
-    </div>
-</form> -->
-
-<!-- <form >
-    <div class="form-group">
-        <input type="text" [(ngModel)]="Quadrinhos.nome" name="nome">
-        <input type="text" [(ngModel)]="Quadrinhos.autor" name="autor" >
-        <input type="text" [(ngModel)]="Quadrinhos.descricao" name="descricao">
-        <input type="text" [(ngModel)]="Quadrinhos.disponibilidade" name="disponibilidade">
-        <input type="number" [(ngModel)]="Quadrinhos.caps" name="caps">
-        <input type="text" [(ngModel)]="Quadrinhos.nacionalidade" name="nacionalidade">
-        <input type="text" [(ngModel)]="Quadrinhos.statusVisto" name="statusVisto">
-        <input type="number" [(ngModel)]="Quadrinhos.status" name="status">
-        <input type="date" [(ngModel)]="Quadrinhos.dtLancamento" name="dtLancamento">
-
-        <input type="submit" value="Enviar" (click)="enviaDados()">
-    </div>
-</form> -->
