--- a/src/app/componentes/desenho/desenho.component.html
+++ b/src/app/componentes/desenho/desenho.component.html
@@ -91,7 +91,7 @@
                                 <mat-card-header>
                                         <mat-card-title>Lancamento</mat-card-title>
                                 </mat-card-header>
-                                <mat-card-content>{{ desenho.dtLancamento }}</mat-card-content>
+                                <mat-card-content>{{ desenho.dtLancamento | date: 'dd/MM/yyyy' }}</mat-card-content>
                         </mat-card>
                 </div>        
         </div>
