--- a/src/app/componentes/filme/filme.component.html
+++ b/src/app/componentes/filme/filme.component.html
@@ -75,7 +75,7 @@
                             <mat-card-header>
                                     <mat-card-title>Lancamento</mat-card-title>
                             </mat-card-header>
-                            <mat-card-content>{{ filme.dtLancamento }}</mat-card-content>
+                            <mat-card-content>{{ filme.dtLancamento | date: 'dd/MM/yyyy' }}</mat-card-content>
                     </mat-card>
             </div>        
     </div>
