--- a/src/app/componentes/jogos/jogos.component.html
+++ b/src/app/componentes/jogos/jogos.component.html
@@ -76,40 +76,8 @@
                             <mat-card-header>
                                     <mat-card-title>Lancamento</mat-card-title>
                             </mat-card-header>
-                            <mat-card-content>{{ jogo.dtLancamento }}</mat-card-content>
+                            <mat-card-content>{{ jogo.dtLancamento | date: 'dd/MM/yyyy' }}</mat-card-content>
                     </mat-card>
             </div>        
     </div>
 </div>
-
-<!-- <form >
-    <div class="form-group">
-        <input type="text" [(ngModel)]="Audio.nome" name="nome">
-        <input type="text" [(ngModel)]="Audio.autor" name="autor" >
-        <input type="text" [(ngModel)]="Audio.descricao" name="descricao">
-        <input type="text" [(ngModel)]="Audio.disponibilidade" name="disponibilidade">
-        <input type="text" [(ngModel)]="Audio.estudio" name="estudio">
-        <input type="text" [(ngModel)]="Audio.duracao" name="nacionalidade">
-        <input type="text" [(ngModel)]="Audio.statusVisto" name="statusVisto">
-        <input type="number" [(ngModel)]="Audio.tipo" name="maxEps">
-        <input type="date" [(ngModel)]="Audio.dtLancamento" name="dtLancamento">
-
-        <input type="submit" value="Enviar" (click)="enviaDados()">
-    </div>
-</form> -->
-
-<!-- <form >
-    <div class="form-group">
-        <input type="text" [(ngModel)]="Jogos.nome" name="nome">
-        <input type="text" [(ngModel)]="Jogos.autor" name="autor" >
-        <input type="text" [(ngModel)]="Jogos.descricao" name="descricao">
-        <input type="text" [(ngModel)]="Jogos.disponibilidade" name="disponibilidade">
-        <input type="text" [(ngModel)]="Jogos.estudio" name="estudio">
-        <input type="text" [(ngModel)]="Jogos.duracaoMedia" name="duracaoMedia">
-        <input type="text" [(ngModel)]="Jogos.statusVisto" name="statusVisto">
-        <input type="number" [(ngModel)]="Jogos.status" name="status">
-        <input type="date" [(ngModel)]="Jogos.dtLancamento" name="dtLancamento">
-
-        <input type="submit" value="Enviar" (click)="enviaDados()">
-    </div>
-</form> -->
