--- a/src/app/componentes/livro/livro.component.html
+++ b/src/app/componentes/livro/livro.component.html
@@ -52,36 +52,8 @@
                             <mat-card-header>
                                     <mat-card-title>Lancamento</mat-card-title>
                             </mat-card-header>
-                            <mat-card-content>{{ livro.dtLancamento }}</mat-card-content>
+                            <mat-card-content>{{ livro.dtLancamento | date: 'dd/MM/yyyy' }}</mat-card-content>
                     </mat-card>
             </div>        
     </div>
 </div>
-
-<!-- <form >
-    <div class="form-group">
-        <input type="text" [(ngModel)]="Audio.nome" name="nome">
-        <input type="text" [(ngModel)]="Audio.autor" name="autor" >
-        <input type="text" [(ngModel)]="Audio.descricao" name="descricao">
-        <input type="text" [(ngModel)]="Audio.disponibilidade" name="disponibilidade">
-        <input type="text" [(ngModel)]="Audio.estudio" name="estudio">
-        <input type="text" [(ngModel)]="Audio.duracao" name="nacionalidade">
-        <input type="text" [(ngModel)]="Audio.statusVisto" name="statusVisto">
-        <input type="number" [(ngModel)]="Audio.tipo" name="maxEps">
-        <input type="date" [(ngModel)]="Audio.dtLancamento" name="dtLancamento">
-
-        <input type="submit" value="Enviar" (click)="enviaDados()">
-    </div>
-</form> -->
-
-<!-- <form >
-    <div class="form-group">
-        <input type="text" [(ngModel)]="Livro.nome" name="nome">
-        <input type="text" [(ngModel)]="Livro.autor" name="autor" >
-        <input type="text" [(ngModel)]="Livro.descricao" name="descricao">
-        <input type="text" [(ngModel)]="Livro.statusLido" name="statusLido">
-        <input type="number" [(ngModel)]="Livro.paginas" name="paginas">
-        <input type="number" [(ngModel)]="Livro.dtLancamento" name="dtLancamento">
-        <input type="submit" value="Enviar" (click)="enviaDados()">
-    </div>
-</form> -->
