--- a/src/app/popups/form-quadrinho/form-quadrinho.component.html
+++ b/src/app/popups/form-quadrinho/form-quadrinho.component.html
@@ -35,9 +35,9 @@
     <div class="checkbox">
         <div class="status">
             <p>Está em lançamento ou finalizado:</p>
-            <mat-radio-group>
-                <mat-radio-button value="L" [(ngModel)]="Quadrinho.status" name="statusL">Lançamento</mat-radio-button>
-                <mat-radio-button value="F" [(ngModel)]="Quadrinho.status" name="statusF">Finalizado</mat-radio-button>
+            <mat-radio-group [(ngModel)]="Quadrinho.status" name="statusL">
+                <mat-radio-button value="Lancamento" >Lançamento</mat-radio-button>
+                <mat-radio-button value="Finalizado" >Finalizado</mat-radio-button>
             </mat-radio-group>
         </div>
 
@@ -45,9 +45,9 @@
         <div class="visto">
             <p>Já assistiu ou não:</p>
             <mat-radio-group>
-                <mat-radio-button value="vi" [(ngModel)]="Quadrinho.statusVisto" name="statusVisto">Já assisti</mat-radio-button>
-                <mat-radio-button value="nvi" [(ngModel)]="Quadrinho.statusVisto" name="statusVisto">Não assisti</mat-radio-button>
-                <mat-radio-button value="ass" [(ngModel)]="Quadrinho.statusVisto" name="statusVisto">Ainda Assistirei</mat-radio-button>
+                <mat-radio-button value="vi" >Já assisti</mat-radio-button>
+                <mat-radio-button value="nvi" >Não assisti</mat-radio-button>
+                <mat-radio-button value="verei" >Ainda Assistirei</mat-radio-button>
             </mat-radio-group>
         </div>
     </div>
