realinhando ao backend e deploy no github pages

--- a/src/app/componentes/desenho/desenho.component.html
+++ b/src/app/componentes/desenho/desenho.component.html
@@ -17,7 +17,7 @@
                                 <mat-card-header>
                                         <mat-card-title>Nome</mat-card-title>
                                 </mat-card-header>
-                                <mat-card-content>{{ Desenho.nome }}</mat-card-content>
+                                <mat-card-content>{{ desenho.nome }}</mat-card-content>
                         </mat-card>
 
                         <mat-card>
