--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -5,7 +5,7 @@
             <mat-card-title>Audio</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let audio of Audios">
-            <p>teste de teste</p>
+            <p>{{audio.nome}} - {{audio.autor}}</p>
         </mat-card-content>
     </mat-card>
 
@@ -14,7 +14,7 @@
             <mat-card-title>Desenhos</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let desenho of desenhos">
-            <p>teste de teste</p>
+            <p>{{desenho.nome}} - {{desenho.autor}}</p>
         </mat-card-content>
     </mat-card>
 
@@ -23,7 +23,7 @@
             <mat-card-title>Filmes</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let filme of filmes">
-            <p>teste de teste</p>
+            <p>{{filme.nome}} - {{filme.diretor}}</p>
         </mat-card-content>
     </mat-card>
 
@@ -32,7 +32,7 @@
             <mat-card-title>Jogos</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let jogo of jogos">
-            <p>teste de teste</p>
+            <p>{{jogo.nome}} - {{jogo.autor}}</p>
         </mat-card-content>
     </mat-card>
 
@@ -41,7 +41,7 @@
             <mat-card-title>Livros</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let livro of livros">
-            <p>teste de teste</p>
+            <p>{{livro.nome}} - {{livro.autor}}</p>
         </mat-card-content>
     </mat-card>
 
@@ -50,7 +50,7 @@
             <mat-card-title>Novelas</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let novela of novelas">
-            <p>teste de teste</p>
+            <p>{{novela.nome}} - {{novela.autor}}</p>
         </mat-card-content>
     </mat-card>
 
@@ -59,7 +59,7 @@
             <mat-card-title>Quadrinhos</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let quadrinho of quadrinhos">
-            <p>teste de teste</p>
+            <p>{{quadrinho.nome}} - {{quadrinho.autor}}</p>
         </mat-card-content>
     </mat-card>
     
@@ -68,7 +68,7 @@
             <mat-card-title>Series</mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let serie of series">
-            <p>teste de teste</p>
+            <p>{{serie.nome}} - {{serie.autor}}</p>
         </mat-card-content>
     </mat-card>
 </main>
